force-app/main/default/objects/Territory__c/Territory__c.object-meta.xml
<CustomObject>
    <label>Territory</label>
    <nameField>
        <label>Territory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>