force-app/main/default/objects/Territory__c/fields/Industry_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Industry_Subtype__c</fullName>
    <label>Industry Subtype</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>SW_Industry__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airlines &amp; Flights</fullName>
            </value>
            <value>
                <fullName>Apparel</fullName>
            </value>
            <value>
                <fullName>Asset Management</fullName>
            </value>
            <value>
                <fullName>Automotive Classifieds</fullName>
            </value>
            <value>
                <fullName>Banks</fullName>
            </value>
            <value>
                <fullName>Beauty &amp; Personal Care</fullName>
            </value>
            <value>
                <fullName>Car Rental</fullName>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Comparison and Cashback</fullName>
            </value>
            <value>
                <fullName>Construction and Commercial Properties</fullName>
            </value>
            <value>
                <fullName>Consultancies</fullName>
            </value>
            <value>
                <fullName>Consumer Electronics</fullName>
            </value>
            <value>
                <fullName>Corporate Development</fullName>
            </value>
            <value>
                <fullName>Credit, Loans, Mortgages</fullName>
            </value>
            <value>
                <fullName>Dating &amp; Relationships</fullName>
            </value>
            <value>
                <fullName>eLearning</fullName>
            </value>
            <value>
                <fullName>Energy or Utilities</fullName>
            </value>
            <value>
                <fullName>Family Office</fullName>
            </value>
            <value>
                <fullName>Food, Beverage and Tobacco</fullName>
            </value>
            <value>
                <fullName>Health Product Manufacturer</fullName>
            </value>
            <value>
                <fullName>Hedge Fund</fullName>
            </value>
            <value>
                <fullName>Home &amp; Garden</fullName>
            </value>
            <value>
                <fullName>Hotels</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Management Consulting</fullName>
            </value>
            <value>
                <fullName>Market Research</fullName>
            </value>
            <value>
                <fullName>Mechanical and Industrial Manufacturing</fullName>
            </value>
            <value>
                <fullName>News &amp; Content Sites</fullName>
            </value>
            <value>
                <fullName>Pension Fund</fullName>
            </value>
            <value>
                <fullName>Pet Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>