force-app/main/default/objects/Territory__c/fields/Re_evaluate__c.field-meta.xml
<CustomField>
    <fullName>Re_evaluate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>flag for re-evaluating territories at the daily batch</description>
    <label>Re-evaluate</label>
    <type>Checkbox</type>
</CustomField>