force-app/main/default/objects/Territory__c/fields/Strategic_Pod__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Pod__c</fullName>
    <description>Use to define Account Members for Stegetic Accounts</description>
    <label>Strategic Pod</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Strategic_Pod</valueSetName>
    </valueSet>
</CustomField>