force-app/main/default/objects/Territory__c/fields/Sub_Division__c.field-meta.xml
<CustomField>
    <fullName>Sub_Division__c</fullName>
    <label>Sub Division</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ANZ Enterprise</fullName>
            </value>
            <value>
                <fullName>ANZ Inside Sales</fullName>
            </value>
            <value>
                <fullName>EMEA Enterprise</fullName>
            </value>
            <value>
                <fullName>EMEA Inside Sales B2B</fullName>
            </value>
            <value>
                <fullName>EMEA Inside Sales B2C</fullName>
            </value>
            <value>
                <fullName>EMEA Inside Sales ENT</fullName>
            </value>
            <value>
                <fullName>EMEA Mid Market</fullName>
            </value>
            <value>
                <fullName>GCR Enterprise</fullName>
            </value>
            <value>
                <fullName>GCR Inside Sales</fullName>
            </value>
            <value>
                <fullName>Investors</fullName>
            </value>
            <value>
                <fullName>JPKR Enterprise</fullName>
            </value>
            <value>
                <fullName>JPKR Inside Sales</fullName>
            </value>
            <value>
                <fullName>LATAM Inside Sales</fullName>
            </value>
            <value>
                <fullName>NA Enterprise</fullName>
            </value>
            <value>
                <fullName>NA Inside Sales</fullName>
            </value>
            <value>
                <fullName>SEA Enterprise</fullName>
            </value>
            <value>
                <fullName>SEA Inside Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>