force-app/main/default/objects/Territory__c/validationRules/Industry_SubType_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Industry_SubType_Required</fullName>
    <active>false</active>
    <description>MIS-3914</description>
    <errorConditionFormula>ISBLANK(Industry_Subtype__c)
&amp;&amp;
and (NOT(ISBLANK(Sub_Division__c)), not(BEGINS(text(Strategic_Pod__c), &quot;NAL&quot;)))</errorConditionFormula>
    <errorDisplayField>Industry_Subtype__c</errorDisplayField>
    <errorMessage>Please ensure that you have provided a value for the &apos;Industry SubType&apos; field. If there is no applicable subtype, you can enter &apos;Empty&apos; in this field.</errorMessage>
</ValidationRule>