force-app/main/default/objects/Territory__c/validationRules/NAL_strategic_pod.validationRule-meta.xml
<ValidationRule>
    <fullName>NAL_strategic_pod</fullName>
    <active>false</active>
    <errorConditionFormula>BEGINS(Text(Strategic_Pod__c), &quot;NAL&quot;) &amp;&amp; ISBLANK(Sub_Division__c)</errorConditionFormula>
    <errorMessage>If you enter a NAL Strategic Pod you must enter Sub division</errorMessage>
</ValidationRule>