force-app/main/default/objects/Territory__c/listViews/Monitor.listView-meta.xml
<ListView>
    <fullName>Monitor</fullName>
    <columns>NAME</columns>
    <columns>Sub_Division__c</columns>
    <columns>SW_Industry__c</columns>
    <columns>Industry_Subtype__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Industry_Subtype__c</field>
        <operation>includes</operation>
        <value>Pet Care</value>
    </filters>
    <filters>
        <field>SW_Industry__c</field>
        <operation>equals</operation>
        <value>&quot;CPG, Food &amp; Beverages&quot;</value>
    </filters>
    <filters>
        <field>Sub_Division__c</field>
        <operation>equals</operation>
        <value>Dach Enterprise</value>
    </filters>
    <label>Monitor</label>
    <sharedTo>
        <role>Admin</role>
    </sharedTo>
</ListView>