force-app/main/default/objects/Territory__c/listViews/My_Territories.listView-meta.xml
<ListView>
    <fullName>My_Territories</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Territories</label>
</ListView>