force-app/main/default/objects/Territory__c/listViews/NAL_Acconts.listView-meta.xml
<ListView>
    <fullName>NAL_Acconts</fullName>
    <columns>NAME</columns>
    <columns>Sub_Division__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Strategic_Pod__c</columns>
    <columns>Re_evaluate__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>NAL</value>
    </filters>
    <label>NAL Territories</label>
</ListView>