force-app/main/default/objects/Territory__c/listViews/Re_Evluate_On.listView-meta.xml
<ListView>
    <fullName>Re_Evluate_On</fullName>
    <columns>NAME</columns>
    <columns>Sub_Division__c</columns>
    <columns>SW_Industry__c</columns>
    <columns>Industry_Subtype__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Re_evaluate__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Re-Evluate On</label>
</ListView>